# tetris-bugs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: app.py  run.py
docs/: architecture.md  goals.md
docs/refactoring/: 2025-08-15-singleplayer-architecture-update.md
frontend/: config.json  index copy.html  index.html  main.py  menu.css  package-lock.json  package.json  style.css
frontend-code-editor/: main.py
frontend-code-editor/src/: timer.py
frontend-code-editor/src/assets/: block.py
frontend-code-editor/styles/: input.css
frontend/engine/: constants.py  controls.py  game.py  ui_manager.py
frontend/engine/objects/: block.py
frontend/modes/code_editor/: config.json  index.html  main.py
frontend/modes/codeeditor/: config.json  constants.py  controls.py  game.py  index.html  main.py  modal.py
frontend/modes/coderush/: config.json  index.html  main.py
frontend/modes/roguelike/: config.json  index.html  main.py
frontend/modes/singleplayer/: config.json  index.html  main.py
frontend/shared/: audio_utils.py  constants.py  controls.py  game.py  problem_helper.py  problems.json  ui_manager.py
frontend/shared/objects/: block.py
frontend/src/: constants.py  controls.py  game.py  modal.py  pause_screen.py  timer.py  ui_helpers.py  utils.py
frontend/src/assets/: block.py
frontend/style/: menu.css  style.css
frontend/styles/: input.css  menu.css  style.css
frontend_code_editor/: config.json
lib/: __init__.py
lib/static/: frontend.py
lib/templates/: index.html
samples/: Pipfile  pyproject.toml
(+35 files in other folders)
