[tool.poetry]
name = "code-jam-template"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <youremail@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyscript = "^0.3.3"
flask = "^3.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "~4.2.0"
ruff = "~0.12.2"

[dependency-groups]
dev = [
    "pre-commit~=4.2.0",
    "ruff~=0.12.2",
]

[tool.ruff]
line-length = 119
target-version = "py313"
fix = true
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", "D104", "D105", "D106", "D107",  # Missing docstrings
    "D203", "D213",  # Docstring whitespace
    "D415",  # Docstring punctuation
    "D301",  # Docstring quotes
    "A",  # Builtins
    "T20",  # Print statements
    "TD002", "TD003", "FIX",  # TODOs
]
