[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <youremail@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyscript = "^0.3.3"
pre-commit = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "~0.12.2"

[tool.ruff]
line-length = 119
target-version = "py313"
fix = true
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", "D104", "D105", "D106", "D107",
    "D203", "D213",
    "D415",
    "D301",
    "A",
    "T20",
    "TD002", "TD003", "FIX"
]
